<resources>
    <string name="app_name">FreeGamesDB</string>
    <string name="format_publisher_developer">%1$s / %2$s</string>

    <string name="no_data">Empty data</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="dump_description">If you’ve been looking for a game to scratch that open-world ARPG itch, one with perhaps a bit of Asian flair, then you’re going to want to check out miHoYo’s Genshin Impact. The developer, known previously for Honkai Impact 3rd, take players to the world of Teyvat, a vast open-world designed for extended exploration. Players not only explore dungeons, but climb mountains, trees, and buildings to discover all kinds of secrets. Of course, the main character doesn’t travel alone. Instead, players build a four-player group out of over 20 characters that can be swapped out to create the best group for any particular mission. The characters, each with different skills filling out the classic RPG types as well as distinct elemental focuses, can be obtained via gameplay or the game’s gacha mechanics – as is gear. Both characters and gear are upgraded in the game via the in depth crafting system.\n\nIn addition, the game offers players an adventurer system that provides them with even more to do, be it daily quests, small favors for the locals, or big continent-traveling quests. The adventurer system also rewards players for their activities with a wide variety of items. Genshin Impact is available to players on PC, PlayStation 4, and mobile devices. It also features a multiplayer mode allowing up to four players to play together and cross-play across all four platforms, however, PlayStation 4 does not allow for cross-progression.</string>
    <string name="dump_publisher_developer">miHoYo</string>
    <string name="dump_release_date">23 September 2023</string>
    <string name="more_info">Get More Info</string>
    <string name="gallery_screenshots">Gallery/Screenshots</string>
    <string name="release_date">Release Date</string>
    <string name="publisher_developer">Publisher/Developer</string>
    <string name="description">Description</string>
    <string name="home_label">Home</string>
    <string name="category_label">Category</string>
    <string name="favorite_label">Favorite</string>
    <string name="dump_title_game">Genshin Impact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_screenshot_available">No Screenshot Available</string>
</resources>